WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51203
WebKit2: Cannot copy two successive selections using cmd-c
https://bugs.webkit.org/show_bug.cgi?id=51203
Summary
WebKit2: Cannot copy two successive selections using cmd-c
Enrica Casucci
Reported
2010-12-16 11:58:08 PST
Created
attachment 76795
[details]
Test case * SUMMARY In WebKit2, I cannot copy two successive selections using cmd-c. I can make a selection and copy it using cmd-c, but then when I make a new selection, the copy item is not enabled in the edit menu and cmd-c does nothing. If I make yet another selection, copying works again. This does not occur when I copy via the edit menu. * STEPS TO REPRODUCE 1. Open the attached test case in Safari while in WK2 mode. 2. Open TextEdit 3. Using the mouse, select the text 'line one'. 4. Copy the selection by pressing cmd-c. 5. Paste the selection into TextEdit using cmd-v. 6. Return to Safari and select the text 'line two'. 7. Open the edit menu and observe that the copy command is disabled. 8. Paste into TextEdit using cmd-v. Observe that 'line one' is still in the clipboard rather than 'line two'. 9. Return to Safari and clear the selection by left clicking once. 10. Re-select 'line two' and press cmd-c. 11. Paste the selection into TextEdit using cmd-v. Observe that 'line two' is now correctly pasted.
Attachments
Test case
(31 bytes, text/html)
2010-12-16 11:58 PST
,
Enrica Casucci
no flags
Details
Patch
(5.37 KB, patch)
2010-12-16 12:00 PST
,
Enrica Casucci
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-12-16 12:00:34 PST
Created
attachment 76796
[details]
Patch
Maciej Stachowiak
Comment 2
2010-12-16 12:17:01 PST
Comment on
attachment 76796
[details]
Patch r=me
Enrica Casucci
Comment 3
2010-12-16 12:19:09 PST
Committed revision 74206.
WebKit Review Bot
Comment 4
2010-12-16 15:40:03 PST
http://trac.webkit.org/changeset/74206
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug